run log from running nextflow jobs appears to be working